--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 
 const pageTitle = "首页";
@@ -13,9 +16,14 @@ const pageTitle = "首页";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">首页</a>
-    <a href="/blog/">博客</a>
-    <a href="/about/">关于</a>
+    <Header />
+
     <h1>{pageTitle}</h1>
+
+    <Footer />
+
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
