--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,5 @@
 ---
-import Navigation from "../components/Navigation.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import "../styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const pageTitle = "关于我";
 
@@ -31,7 +28,7 @@ const textCase = "uppercase";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
-    <style define:vars={{ skillColor, fontWeight, textCase }}>
+    <style is:global define:vars={{ skillColor, fontWeight, textCase }}>
       h1 {
         color: purple;
         font-size: 4rem;
@@ -43,10 +40,7 @@ const textCase = "uppercase";
       }
     </style>
   </head>
-  <body>
-    <Header />
-
-    <h1>{pageTitle}</h1>
+  <BaseLayout pageTitle = { pageTitle }>
     <h2>……和我的新 Astro 网站！</h2>
 
     <p>
@@ -79,12 +73,6 @@ const textCase = "uppercase";
 
     {finished && <p>我完成了这节教程！</p>}
 
-    {goal === 3 ? <p>我的目标是在三天内完成。</p> : <p>我的目标不是 3 天。</p>}
-
-    <Footer />
-
-    <script>
-      import "../scripts/menu.js";
-    </script>
-  </body>
+    {goal === 3 ? <p>我的目标是在三天内完成。</p> : <p>我的目标不是 3 天。</p>}  
+  </BaseLayout>
 </html>
