--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,5 @@
 ---
-import Navigation from "../components/Navigation.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import "../styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const pageTitle = "我的 Astro 学习博客";
 ---
@@ -15,20 +12,12 @@ const pageTitle = "我的 Astro 学习博客";
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
-  <body>
-    <Header />
-    <h1>{pageTitle}</h1>
+  <BaseLayout pageTitle={ pageTitle }>
     <p>在这里，我将分享我的学习 Astro 之旅。</p>
     <ul>
       <li><a href="/posts/post-1/">文章 1</a></li>
       <li><a href="/posts/post-2/">文章 2</a></li>
       <li><a href="/posts/post-3/">文章 3</a></li>
     </ul>
-
-    <Footer />
-
-    <script>
-      import "../scripts/menu.js";
-    </script>
-  </body>
+  </BaseLayout>
 </html>
