--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,5 +5,6 @@
 <div class="nav-links">
   <a href="/">首页</a>
   <a href="/blog/">博客</a>
+  <a href="/tags/">标签</a>
   <a href="/about/">关于</a>
 </div>
