--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,23 +1,19 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import BlogPost from "../components/BlogPost.astro";
 
+const allPages = Object.values(
+  import.meta.glob("./posts/*.md", { eager: true })
+);
 const pageTitle = "我的 Astro 学习博客";
 ---
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <BaseLayout pageTitle={ pageTitle }>
-    <p>在这里，我将分享我的学习 Astro 之旅。</p>
-    <ul>
-      <li><a href="/posts/post-1/">文章 1</a></li>
-      <li><a href="/posts/post-2/">文章 2</a></li>
-      <li><a href="/posts/post-3/">文章 3</a></li>
-    </ul>
-  </BaseLayout>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <p>在这里，我将分享我的学习 Astro 之旅。</p>
+  <ul>
+    {
+      allPages.map((post: any) => (
+        <BlogPost url={post.url} title={post.frontmatter.title} />
+      ))
+    }
+  </ul>
+</BaseLayout>
